--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
     "next": "^12.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "twitter-v2": "git://github.com/nayutads/twitter-v2#1a4ade4da9ab8bd7c0d956c3ff60bb52c377b4bb",
     "typescript": "^4.5.2"
   },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "fight:start": "npx tsm utils/startFight.ts",
+    "fight:record": "npx tsm utils/recordFights.ts"
   },
   "devDependencies": {
-    "@types/react": "^17.0.35"
+    "@types/react": "^17.0.35",
+    "dotenv": "^10.0.0"
   }
 }
