--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "build": "next build",
     "start": "next start",
     "fight:start": "npx tsm utils/startFight.ts",
-    "fight:record": "npx tsm utils/recordFights.ts"
+    "fight:record": "npx tsm utils/recordFights.ts",
+    "postinstall": "npx prisma generate"
   },
   "devDependencies": {
     "@types/react": "^17.0.35",
