Set tally on cron

--- a/.github/workflows/startFight.yml
+++ b/.github/workflows/startFight.yml
@@ -1,4 +1,4 @@
-name: Start a fight
+name: Tally and start fights
 
 # Controls when the workflow will run
 on:
@@ -26,3 +26,12 @@ jobs:
           TWITTER_ACCESS_SECRET: ${{ secrets.TWITTER_ACCESS_SECRET }}
           TWITTER_ACCESS_KEY: ${{ secrets.TWITTER_ACCESS_KEY }}
         run: npm run fight:start
+
+      - name: Tally fights
+        env:
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          TWITTER_CONSUMER_SECRET: ${{ secrets.TWITTER_CONSUMER_SECRET }}
+          TWITTER_CONSUMER_KEY: ${{ secrets.TWITTER_CONSUMER_KEY }}
+          TWITTER_ACCESS_SECRET: ${{ secrets.TWITTER_ACCESS_SECRET }}
+          TWITTER_ACCESS_KEY: ${{ secrets.TWITTER_ACCESS_KEY }}
+        run: npm run fight:tally
