--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "^4.13.0",
+    "@vercel/postgres": "^0.1.3",
     "next": "^13.3.4",
     "prisma": "^4.13.0",
     "react": "^18.2.0",
